# postal-latlon-master

./: .gitignore  README.md  make_table.py  pyproject.toml  run_api.py
data/manual_latlon/: manual_latlon.xlsx
data/tmp/: error_postals.xlsx  error_postals_meken.xlsx
postal_latlon/: postal_latlon.py
