[tool.poetry]
name = "20240207-postalcode2latlon"
version = "0.1.0"
description = ""
authors = ["akiraina <a.inayoshi@outlook.com>"]
readme = "README.md"
packages = [{include = "20240207_postalcode2latlon"}]

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.2.0"
sqlalchemy = "^2.0.25"
pyarrow = "^15.0.0"
requests = "^2.31.0"
ipykernel = "^6.29.2"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "N"]
